--- a/css/style.css
+++ b/css/style.css
@@ -7,144 +7,101 @@
   text-decoration: none;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
-  font-family: "Mulish", sans-serif; }
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif; }
   *:focus {
     outline: 0; }
 
 body {
-  background: #f2f2f2;
-  height: 100vh;
-  display: grid;
-  place-items: center; }
-
-.popup-open-btn {
-  border: 2px solid #f34b8c;
-  border-radius: 5px;
-  height: 50px;
-  padding: 0 40px;
-  font-size: 18px;
-  font-weight: 900;
-  color: #f34b8c;
-  line-height: 46px;
-  cursor: pointer; }
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  align-items: center;
-  justify-content: center;
-  display: none; }
-
-.settings-popup {
   background: #fff;
-  padding: 85px 100px;
-  border-radius: 15px;
-  width: 912px;
-  box-shadow: 0 67px 55px -34px rgba(85, 26, 83, 0.1);
-  position: relative; }
-  .settings-popup .close-popup {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    text-align: right;
-    cursor: pointer; }
-    .settings-popup .close-popup span {
-      display: block;
-      font-size: 16px;
-      color: rgba(36, 46, 76, 0.5); }
-  .settings-popup h3 {
-    font-size: 28px;
-    color: #874285;
-    font-weight: 900;
-    margin-bottom: 55px; }
-  .settings-popup ul li {
-    margin-bottom: 40px;
+  height: 100vh; }
+  body .header {
+    width: 90%;
+    margin: auto;
+    height: 65px;
     display: flex;
-    align-items: center;
     justify-content: space-between; }
-    .settings-popup ul li:last-child {
-      margin-bottom: 0; }
-    .settings-popup ul li .item h5 {
-      font-size: 20px;
-      font-weight: 900;
-      color: #874285;
-      margin-bottom: 13px; }
-    .settings-popup ul li .item select {
-      margin-top: 35px;
-      width: 330px;
-      cursor: pointer;
-      height: 50px;
-      border-radius: 5px;
-      border: 2px solid #d8dbe6;
-      font-size: 20px;
-      color: #242e4c;
-      padding: 0 20px;
-      appearance: none;
-      background: #ffffff url(../img/select-arrow.svg) no-repeat calc(100% - 20px); }
-      .settings-popup ul li .item select:hover {
-        border-color: #9298ad;
-        color: #9298ad; }
-    .settings-popup ul li .item p {
-      font-size: 16px;
-      color: #242e4c;
-      line-height: 22px; }
-    .settings-popup ul li .checkbox-input .checkbox {
-      width: 66px;
-      display: block;
-      height: 37px;
-      border: 2px solid #d8dbe6;
-      border-radius: 37px;
-      position: relative;
+    body .header .icon {
+      float: left;
       cursor: pointer; }
-      .settings-popup ul li .checkbox-input .checkbox::before {
-        content: "";
-        width: 25px;
-        height: 25px;
-        border-radius: 50%;
-        background: #9298ad;
-        position: absolute;
-        top: 4px;
-        left: 4px;
-        transition: 300ms left, 300ms background-color; }
-    .settings-popup ul li .checkbox-input input {
-      display: none; }
-      .settings-popup ul li .checkbox-input input:checked + .checkbox::before {
-        left: 33px;
-        background: #874285; }
-  .settings-popup hr {
-    height: 1px;
-    background: #d8dbe6;
-    margin: 45px 0; }
-  .settings-popup .actions {
-    margin-top: 55px;
+      body .header .icon img {
+        width: 80px; }
+    body .header ul {
+      float: right;
+      display: flex;
+      justify-content: space-around;
+      align-items: center; }
+      body .header ul li {
+        margin: 10px;
+        color: black;
+        cursor: pointer;
+        color: #848585; }
+        body .header ul li.get-started button {
+          color: #848585;
+          cursor: pointer;
+          padding: 10px;
+          border-radius: 5px;
+          border: 1px #848585 solid; }
+  body .sub-header {
     display: flex;
-    align-items: center; }
-    .settings-popup .actions a {
-      border: 2px solid #d8dbe6;
-      border-radius: 6px;
-      height: 54px;
-      width: 161px;
-      display: grid;
-      place-items: center;
-      margin-right: 20px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #9298ad; }
-      .settings-popup .actions a:hover {
-        border-color: #9298ad;
-        color: #5d647c; }
-      .settings-popup .actions a.active {
-        background-color: #f34b8c;
-        border-color: #f34b8c;
-        color: #fff; }
-      .settings-popup .actions a:last-child {
-        margin-right: 0; }
-
-input[data-popup] {
-  display: none; }
-  input[data-popup]:checked + .popup {
-    display: flex; }
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #f9f9f9; }
+    body .sub-header .sub-buttons {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      height: 53px;
+      margin: 0 40px; }
+      body .sub-header .sub-buttons span {
+        color: #848585;
+        margin: 0 5px; }
+      body .sub-header .sub-buttons a {
+        color: black;
+        font-size: 16px;
+        color: #848585; }
+  body main {
+    width: 60%;
+    margin: auto; }
+    body main .title h1 {
+      font-size: 48px;
+      font-family: fell, Georgia, Cambria, "Times New Roman", Times, serif;
+      margin-bottom: 20px; }
+    body main .account-bar {
+      display: flex;
+      justify-content: space-between; }
+      body main .account-bar .account-icon ul {
+        display: flex;
+        justify-content: baseline; }
+        body main .account-bar .account-icon ul li > svg > path {
+          color: #848585; }
+    body main .photo img.images {
+      width: 60vw;
+      margin: 20px 0;
+      box-sizing: border-box;
+      border-radius: 5px; }
+    body main .photo-info {
+      color: #848585;
+      display: flex;
+      justify-content: center; }
+      body main .photo-info a {
+        color: #848585;
+        text-decoration: underline; }
+    body main span {
+      margin: 50px 0;
+      display: flex;
+      justify-content: center;
+      font-size: 30px; }
+    body main p.text-paragraf {
+      font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+      font-size: 1.4rem;
+      line-height: 1.5rem;
+      margin-bottom: 40px; }
+    body main h1.sub-title {
+      font-weight: 900;
+      font-size: 1.4rem;
+      font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+    body main img.images {
+      width: 60vw;
+      margin: 20px 0;
+      box-sizing: border-box;
+      border-radius: 5px; }
