--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
   text-decoration: none;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
-  font-family: "Mulish", sans-serif;
+  font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   &:focus {
     outline: 0;
@@ -16,190 +16,136 @@
 }
 
 body {
-  background: #f2f2f2;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-
-.popup-open-btn {
-  border: 2px solid #f34b8c;
-  border-radius: 5px;
-  height: 50px;
-  padding: 0 40px;
-  font-size: 18px;
-  font-weight: 900;
-  color: #f34b8c;
-  line-height: 46px;
-  cursor: pointer;
-}
-
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(#000, 0.5);
-  align-items: center;
-  justify-content: center;
-  display: none;
-}
-
-.settings-popup {
   background: #fff;
-  padding: 85px 100px;
-  border-radius: 15px;
-  width: 912px;
-  box-shadow: 0 67px 55px -34px rgba(#551a53, 0.1);
-  position: relative;
+  height: 100vh;
 
-  .close-popup {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    text-align: right;
-    cursor: pointer;
+  .header {
+    width: 90%;
+    margin: auto;
+    height: 65px;
+    display: flex;
+    justify-content: space-between;
 
-    span {
-      display: block;
-      font-size: 16px;
-      color: rgba(#242e4c, 0.5);
+    .icon {
+      float: left;
+      cursor: pointer;
+
+      img {
+        width: 80px;
+      }
+    }
+
+    ul {
+      float: right;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      li {
+        margin: 10px;
+        color: black;
+        cursor: pointer;
+        color: rgba(132, 133, 133, 1);
+
+        &.get-started {
+          button {
+            color: rgba(132, 133, 133, 1);
+            cursor: pointer;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px rgba(132, 133, 133, 1) solid;
+          }
+        }
+      }
     }
   }
+  .sub-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #f9f9f9;
 
-  h3 {
-    font-size: 28px;
-    color: #874285;
-    font-weight: 900;
-    margin-bottom: 55px;
-  }
-
-  ul {
-    li {
-      margin-bottom: 40px;
+    .sub-buttons {
       display: flex;
+      justify-content: flex-start;
       align-items: center;
+      height: 53px;
+      margin: 0 40px;
+      span {
+        color: rgba(132, 133, 133, 1);
+        margin: 0 5px;
+      }
+      a {
+        color: black;
+        font-size: 16px;
+        color: rgba(132, 133, 133, 1);
+      }
+    }
+  }
+  main {
+    width: 60%;
+    margin: auto;
+
+    .title {
+      h1 {
+        font-size: 48px;
+        font-family: fell, Georgia, Cambria, "Times New Roman", Times, serif;
+        margin-bottom: 20px;
+      }
+    }
+
+    .account-bar {
+      display: flex;
       justify-content: space-between;
 
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      .item {
-        h5 {
-          font-size: 20px;
-          font-weight: 900;
-          color: #874285;
-          margin-bottom: 13px;
-        }
-
-        select {
-          margin-top: 35px;
-          width: 330px;
-          cursor: pointer;
-          height: 50px;
-          border-radius: 5px;
-          border: 2px solid #d8dbe6;
-          font-size: 20px;
-          color: #242e4c;
-          padding: 0 20px;
-          appearance: none;
-          background: #ffffff url(../img/select-arrow.svg) no-repeat
-            calc(100% - 20px);
-
-          &:hover {
-            border-color: #9298ad;
-            color: #9298ad;
-          }
-        }
-
-        p {
-          font-size: 16px;
-          color: #242e4c;
-          line-height: 22px;
-        }
-      }
-
-      .checkbox-input {
-        .checkbox {
-          width: 66px;
-          display: block;
-          height: 37px;
-          border: 2px solid #d8dbe6;
-          border-radius: 37px;
-          position: relative;
-          cursor: pointer;
-
-          &::before {
-            content: "";
-            width: 25px;
-            height: 25px;
-            border-radius: 50%;
-            background: #9298ad;
-            position: absolute;
-            top: 4px;
-            left: 4px;
-            transition: 300ms left, 300ms background-color;
-          }
-        }
-        input {
-          display: none;
-          &:checked + .checkbox {
-            &::before {
-              left: 33px;
-              background: #874285;
-            }
+      .account-icon {
+        ul {
+          display: flex;
+          justify-content: baseline;
+          li > svg > path {
+            color: rgba(132, 133, 133, 1);
           }
         }
       }
     }
-  }
-
-  hr {
-    height: 1px;
-    background: #d8dbe6;
-    margin: 45px 0;
-  }
-
-  .actions {
-    margin-top: 55px;
-    display: flex;
-    align-items: center;
-
-    a {
-      border: 2px solid #d8dbe6;
-      border-radius: 6px;
-      height: 54px;
-      width: 161px;
-      display: grid;
-      place-items: center;
-      margin-right: 20px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #9298ad;
-
-      &:hover {
-        border-color: #9298ad;
-        color: darken(#9298ad, 20%);
-      }
-
-      &.active {
-        background-color: #f34b8c;
-        border-color: #f34b8c;
-        color: #fff;
-      }
-
-      &:last-child {
-        margin-right: 0;
+    .photo {
+      img.images {
+        width: 60vw;
+        margin: 20px 0;
+        box-sizing: border-box;
+        border-radius: 5px;
       }
     }
-  }
-}
-
-input[data-popup] {
-  display: none;
-  &:checked + .popup {
-    display: flex;
+    .photo-info {
+      color: rgba(132, 133, 133, 1);
+      display: flex;
+      justify-content: center;
+      a {
+        color: rgba(132, 133, 133, 1);
+        text-decoration: underline;
+      }
+    }
+    span {
+      margin: 50px 0;
+      display: flex;
+      justify-content: center;
+      font-size: 30px;
+    }
+    p.text-paragraf {
+      font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
+      font-size: 1.4rem;
+      line-height: 1.5rem;
+      margin-bottom: 40px;
+    }
+    h1.sub-title {
+      font-weight: 900;
+      font-size: 1.4rem;
+      font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+    img.images {
+      width: 60vw;
+      margin: 20px 0;
+      box-sizing: border-box;
+      border-radius: 5px;
+    }
   }
 }
